--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <! --The html code below is used to set the text on the web page tab -->
         <! --You can set this to whatever you want -->
         <! --For example: {Your name - Portfolio Type} -->
-        <title>Explore Data Science Academy - Serverless Student Portfolio Web page</title>
+        <title>NJ Magwede - Serverless Student Portfolio Web page</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/Untitled.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -46,7 +46,7 @@
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- You can change 'Cloud Computing Predict' to 'Your Name' -->
                 <!-- The Masthead will then read: '{Your Name} - Project Portfolio' -->
-                <h1 class="masthead-heading text-uppercase mb-0">Cloud Computing Predict - Project Portfolio</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Judith Magwede - Project Portfolio</h1>
                 <!-- ======================================= -->
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
@@ -57,7 +57,7 @@
                 <!-- Masthead Subheading-->
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- Change this to a list of three or four of your most relevant skills-->
-                <p class="masthead-subheading font-weight-light mb-0">Machine Learning - Time Series - Dashboarding</p>
+                <p class="masthead-subheading font-weight-light mb-0">Python programming - SQL - Database technology</p>
                 <!-- ======================================= -->
             </div>
         </header>
@@ -82,7 +82,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/christopher-robin-ebbinghaus-pgSkeh0yl8o-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/Untitled.ico" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/thisisengineering-raeng-hoivM01c-vg-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/avataaars.svg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/gertruda-valaseviciute-xMObPS6V_gY-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/digital_skills_logo.png" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/michael-dziedzic-aQYgUYwnCsM-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/explore.JPG" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/steve-johnson-5MTf9XyVVgM-unsplash.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/favicon.ico" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -240,7 +240,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            12th Floor, Rennie House, 19 Ameshoff St
+                            2nd Floor, Glen Heights, 9287 Gingerlilly St
                             <br />
                             Johannesburg, 2001
                         </p>
@@ -251,9 +251,9 @@
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <!-- ========= CUSTOMISE SECTION =========== -->
                         <!-- Update the URL strings placed within the href field in order to link your website to your social media accounts-->
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/explore.datascience/"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/data_explore?lang=en"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/judaeza.M"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/ndivhuho-magwede-06b52716/"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
                         <!-- ======================================= -->
                     </div>
@@ -261,9 +261,9 @@
                     <!-- ========= CUSTOMISE SECTION =========== -->
                     <!-- You may wish to modify this text to align with your personal portfolio website -->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">Explore AI Cloud Computing Predict</h4>
+                        <h4 class="text-uppercase mb-4">Ndivhuho Judith Magwede Computing Predict</h4>
                         <p class="lead mb-0">
-                            Create your own data science portfolio with an intelligent NPL bot handling enquiries for you.</a>
+                            Created my own data engineering portfolio with show casing the power of cloud computing.</a>
                         </p>
                     </div>
                     <!-- ======================================= -->
@@ -294,7 +294,7 @@
                                 <div class="col-lg-8">
                                     <!-- Portfolio Piece - Title-->
                                     <!-- Modify the title of the first portfolio project here -->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Credit Fraud Detector</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">AWS Cloud Computing</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -306,7 +306,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/ales-nesetril-ex_p4AaBxbs-unsplash.jpg" alt="" />
                                     <!-- Portfolio Piece - Text-->
                                     <!-- Modify the description of the first portfolio project here-->
-                                    <p class="mb-5">Built a credit card fraud detection system for one of South Africas big four banks</p>
+                                    <p class="mb-5">Worked on an AWS website hosted on Github</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -335,7 +335,7 @@
                                 <div class="col-lg-8">
                                     <!-- Portfolio Piece - Title-->
                                     <!-- Modify the title of the second portfolio project here -->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Rock Formation Classifier</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Data Engineering</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -347,7 +347,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/sebastian-pichler-oqFHLfLFtmc-unsplash.jpg" alt="" />
                                     <!-- Portfolio Piece - Text-->
                                     <!-- Modify the description of the second portfolio project here-->
-                                    <p class="mb-5">Designed and built a PoC rock formation density classifier to aid engineers in the preliminary building design phase</p>
+                                    <p class="mb-5">Data engineering is the process of building and managing data pipelines for efficient collection, storage, and analysis of large datasets.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -376,7 +376,7 @@
                                 <div class="col-lg-8">
                                     <!-- Portfolio Piece - Title-->
                                     <!-- Modify the title of the third portfolio project here -->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Search for Dark Matter Hints with Machine Learning</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Explore AI</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -388,7 +388,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/halgatewood-com-OgvqXGL7XO4-unsplash.jpg" alt="" />
                                     <!-- Portfolio Piece - Text-->
                                     <!-- Modify the description of the third portfolio project here-->
-                                    <p class="mb-5">This project covers several cases of detector design optimization in high energy physics experiments using Bayesian optimization with Gaussian processes</p>
+                                    <p class="mb-5">This project covers how to building and hosting a static website that displays all of your world-class data science and machine learning portfolio projects.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -417,7 +417,7 @@
                                 <div class="col-lg-8">
                                     <!-- Portfolio Piece - Title-->
                                     <!-- Modify the title of the fourth portfolio project here -->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Self Driving Car with Rasperry PI and Deep Learning</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Machine Learning</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -429,7 +429,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tr-n-toan-RdV3_mu0EQU-unsplash.jpg" alt="" />
                                     <!-- Portfolio Piece - Text-->
                                     <!-- Modify the description of the fourth portfolio project here-->
-                                    <p class="mb-5">Created a light weight deep learning model able to be deployed on a Raspberry PI for use in a toy self-driving car</p>
+                                    <p class="mb-5">Machine learning is AI that enables systems to learn from data and improve over time.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -470,7 +470,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/klaudia-piaskowska-g55bG1O5Lf0-unsplash.jpg" alt="" />
                                     <!-- Portfolio Piece - Text-->
                                     <!-- Modify the description of the fifth portfolio project here-->
-                                    <p class="mb-5">Given the location of the auction, the artist, the image of the art piece, historical prices and various other features, this model will give an estimation of the auction price for that particular art piece. </p>
+                                    <p class="mb-5">Data science is the field of extracting insights and knowledge from data using scientific methods, algorithms, and systems. </p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -499,7 +499,7 @@
                                 <div class="col-lg-8">
                                     <!-- Portfolio Piece - Title-->
                                     <!-- Modify the title of the sixth portfolio project here -->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Hospital Efficiency Monitor</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">Digital Skills</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -511,7 +511,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/daan-stevens-yGUuMIqjIrU-unsplash.jpg" alt="" />
                                     <!-- Portfolio Piece - Text-->
                                     <!-- Modify the description of the sixth portfolio project here-->
-                                    <p class="mb-5">This piece of software takes in various financial, operational, strategic and process metrics and returns an estimate of the hospitals efficiency. This model also flags anomalous events and tries to forecast if performance will degrade over time and what the preventative measures might be to reduce/ nullify performance degradation.</p>
+                                    <p class="mb-5">Digital skills refer to proficiency in using digital technologies for tasks ranging from communication to problem-solving.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -537,3 +537,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
